--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
     "@rails/actioncable": "^6.0.0-alpha",
     "@rails/activestorage": "^6.0.0-alpha",
     "@rails/ujs": "^6.0.0-alpha",
-    "@rails/webpacker": "^4.0.7"
+    "@rails/webpacker": "^4.0.7",
+    "elm": "^0.19.1-3",
+    "elm-webpack-loader": "^6.0.0"
   },
   "version": "0.1.0",
   "devDependencies": {
+    "elm-hot-webpack-loader": "^1.1.2",
     "webpack-dev-server": "^3.9.0"
   }
 }
