--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "@rails/activestorage": "^6.0.0-alpha",
     "@rails/ujs": "^6.0.0-alpha",
     "@rails/webpacker": "^4.0.7",
+    "bootstrap": "^4.3.1",
     "elm": "^0.19.1-3",
-    "elm-webpack-loader": "^6.0.0"
+    "elm-webpack-loader": "^6.0.0",
+    "jquery": "^3.4.1",
+    "popper.js": "^1.16.0"
   },
   "version": "0.1.0",
   "devDependencies": {
