--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,11 +1,6 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: MyString
-  password_digest: MyString
-  status: 1
-
-two:
-  name: MyString
-  password_digest: MyString
+  name: John
+  password_digest: <%= User.digest('password') %>
   status: 1
