--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@rails/ujs": "^6.0.0-alpha",
     "@rails/webpacker": "^4.0.7",
     "bootstrap": "^4.3.1",
+    "bootswatch": "^4.3.1",
     "elm": "^0.19.1-3",
     "elm-webpack-loader": "^6.0.0",
     "jquery": "^3.4.1",
