--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
     "@rails/webpacker": "^4.0.7",
     "bootstrap": "^4.3.1",
     "bootswatch": "^4.3.1",
-    "elm": "^0.19.1-3",
-    "elm-webpack-loader": "^6.0.0",
     "jquery": "^3.4.1",
     "popper.js": "^1.16.0"
   },
   "version": "0.1.0",
   "devDependencies": {
-    "elm-hot-webpack-loader": "^1.1.2",
+    "webpack": "^4.41.2",
+    "webpack-assets-manifest": "^3.1.1",
+    "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.9.0"
   }
 }
