--- a/package.json
+++ b/package.json
@@ -4,5 +4,15 @@
     "webpack": "^4.41.2",
     "webpack-assets-manifest": "^3.1.1",
     "webpack-cli": "^3.3.10"
+  },
+  "dependencies": {
+    "bootstrap": "^4.3.1",
+    "bootswatch": "^4.3.1",
+    "css-loader": "^3.2.0",
+    "jquery": "^3.4.1",
+    "mini-css-extract-plugin": "^0.8.0",
+    "popper.js": "^1.16.0",
+    "postcss-loader": "^3.0.0",
+    "postcss-preset-env": "^6.7.0"
   }
 }
