--- a/package.json
+++ b/package.json
@@ -6,13 +6,20 @@
     "webpack-cli": "^3.3.10"
   },
   "dependencies": {
+    "autoprefixer": "^9.7.1",
     "bootstrap": "^4.3.1",
     "bootswatch": "^4.3.1",
     "css-loader": "^3.2.0",
     "jquery": "^3.4.1",
     "mini-css-extract-plugin": "^0.8.0",
+    "node-sass": "^4.13.0",
     "popper.js": "^1.16.0",
     "postcss-loader": "^3.0.0",
-    "postcss-preset-env": "^6.7.0"
+    "postcss-preset-env": "^6.7.0",
+    "sass-loader": "^8.0.0",
+    "style-loader": "^1.0.0"
+  },
+  "comment": {
+    "bootswatch": "^4.3.1"
   }
 }
