--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     "bootstrap": "^4.3.1",
     "bootswatch": "^4.3.1",
     "css-loader": "^3.2.0",
+    "file-loader": "^4.2.0",
     "jquery": "^3.4.1",
+    "jquery-ui": "^1.12.1",
+    "jquery-ui-themes": "^1.12.0",
     "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.13.0",
     "popper.js": "^1.16.0",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.7.0",
+    "rails-ujs": "^5.2.3",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.0"
   },
