--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "autoprefixer": "^9.7.1",
     "bootstrap": "^4.3.1",
     "bootswatch": "^4.3.1",
+    "coffee-loader": "^0.9.0",
+    "coffeescript": "^2.4.1",
     "css-loader": "^3.2.0",
     "file-loader": "^4.2.0",
     "jquery": "^3.4.1",
