--- a/config/database.yml
+++ b/config/database.yml
@@ -8,7 +8,7 @@ default: &default
   adapter: mysql2
   encoding: utf8
   pool: 5
-  host: 127.0.0.1
+  host: db
   username: ginmaku
   password: abc123
 
