--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "postcss-preset-env": "^6.7.0",
     "rails-ujs": "^5.2.3",
     "sass-loader": "^8.0.0",
+    "serialize-javascript": "2.1.1",
     "style-loader": "^1.0.0"
   },
   "comment": {
