--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "SHIMADA Keiki <shimada.cake@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "postinstall": "yarn run webpack --config ./webpack.config.js --mode production"
+    "postinstall": "yarn run webpack --config ./webpack.config.js --mode production",
+    "heroku-postbuild": "yarn run webpack --config ./webpack.config.js --mode production"
   },
   "engines": { "yarn": "1.22.11" },
   "dependencies": {
