--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "postinstall": "yarn run webpack --config ./webpack.config.js --mode production",
     "heroku-postbuild": "yarn run webpack --config ./webpack.config.js --mode production"
   },
-  "engines": { "yarn": "1.22.11" },
+  "engines": {
+    "node": "16.6",
+    "yarn": "1.22.11"
+  },
   "dependencies": {
     "@popperjs/core": "^2.9.3",
     "autoprefixer": "^10.3.1",
