--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,8 +1,8 @@
 # nodeイメージをビルド
-FROM node:13.1.0-alpine as node
+FROM node:16.6.2-alpine3.14 as node
 
 # 軽量のAlpine Linuxベースのイメージ
-FROM ruby:2.6.5-alpine3.10
+FROM ruby:3.0.2-alpine3.14
 
 # rails consoleの中で日本語入力を設定
 ENV LANG C.UTF-8
@@ -13,7 +13,8 @@ RUN apk add --no-cache alpine-sdk \
     mysql-dev \
     build-base \
     bash \
-    tzdata
+    tzdata \
+    dpkg
 
 RUN gem install bundler
 
@@ -29,10 +30,12 @@ RUN wget https://github.com/progrium/entrykit/releases/download/v${ENTRYKIT_VERS
     && entrykit --symlink
 
 # javascriptパッケージマネージャ
-ENV YARN_VERSION 1.19.1
+ENV YARN_VERSION 1.22.11
 
-# MSBで、ビルドしたnodeイメージからyarnとnodeをコピー
-COPY --from=node /opt/yarn-v$YARN_VERSION /opt/yarn
+RUN wget https://github.com/yarnpkg/yarn/releases/download/v${YARN_VERSION}/yarn_${YARN_VERSION}_all.deb \
+    && dpkg -i yarn_${YARN_VERSION}_all.deb
+
+# MSBで、ビルドしたnodeイメージからnodeをコピー
 COPY --from=node /usr/local/bin/node /usr/local/bin/
 
 # dockerイメージから参照できる様シンボリックリンク作成
@@ -45,7 +48,20 @@ RUN mkdir /app
 # 作業フォルダとして設定
 WORKDIR /app
 
-# entrykitのコマンド設定
-ENTRYPOINT [ \
-    "prehook", "ruby -v", "--", \
-    "prehook", "bundle install -j3 --quiet", "--"]
+# ライブラリのインストールに必要なファイル群を配置
+ADD Gemfile /app/Gemfile
+ADD Gemfile.lock /app/Gemfile.lock
+ADD package.json /app/package.json
+ADD yarn.lock /app/yarn.lock
+ADD webpack.config.js /app/webpack.config.js
+COPY app/javascript /app/app/javascript
+
+# コンパイルした assets を格納するディレクトリの作成
+RUN mkdir -p /public/packs
+
+# ライブラリのインストール
+RUN bundle install --jobs=4
+RUN yarn install
+
+# リポジトリ全体をコピー
+COPY . /app/
