--- a/config/database.yml
+++ b/config/database.yml
@@ -8,12 +8,11 @@ default: &default
   adapter: mysql2
   encoding: utf8
   pool: 5
-  host: db
+  host: <%= ENV['DB_HOST'] || 'localhost' %>
 
 development:
   <<: *default
   database: ginmaku
-  host: 127.0.0.1
   username: docker
   password: docker
 
@@ -23,7 +22,6 @@ development:
 test:
   <<: *default
   database: ginmaku_test
-  host: 127.0.0.1
   username: root
   password: root
 
