--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,36 @@
 version: '3'
 services:
-  # app: &app_base      # rails server用コンテナ
-  #   build:            # Dockerfileを実行し、ビルドされる時のパス指定
-  #     context: .
-  #     dockerfile: Dockerfile.dev
-  #   volumes:          # マウントする設定ファイルのパス指定
-  #     - .:/app
-  #     - bundle-data:/usr/local/bundle
-  #   ports:            # port番号（docker:host）
-  #     - "3000:3000"
-  #   depends_on:       # Service同士の依存関係
-  #     - db
-  #   command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
-  #   tty: true         # railsのデバッグを使用するための設定
-  #   stdin_open: true  # 同上
-
+  app: &app_base      # rails server用コンテナ
+    build:            # Dockerfileを実行し、ビルドされる時のパス指定
+      context: .
+      dockerfile: Dockerfile.dev
+    volumes:          # マウントする設定ファイルのパス指定
+      - .:/app
+    ports:            # port番号（docker:host）
+      - "3000:3000"
+    depends_on:       # Service同士の依存関係
+      - db
+    command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
+    environment:
+      RAILS_ENV: development
+      DB_HOST: db
+    tty: true         # railsのデバッグを使用するための設定
+    stdin_open: true  # 同上
+  webpack-dev-server:
+    build:
+      context: .
+      dockerfile: Dockerfile.dev
+    command: yarn run webpack --watch
+    volumes:
+      - ./public/packs:/app/public/packs
+      - ./app/javascript:/app/app/javascript
+    ports:
+      - "8081:8081"
+    depends_on:
+      - db
   db:
     image: mysql:8.0
-    command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_bin
+    command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_bin --default-authentication-plugin=mysql_native_password
     volumes:
       - mysql:/var/lib/mysql
       # - ./docker_mysql:/etc/mysql/conf.d
@@ -28,10 +41,8 @@ services:
       MYSQL_PASSWORD: docker
       TZ: 'Asia/Tokyo'
     ports:
-      - "3306:3306"
+      - "4306:3306"
 
 volumes:
   mysql:
     driver: local
-  # bundle-data:
-  #   driver: local
